--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -4,12 +4,12 @@
       <h1>Hello, I’m Snekha Palanisamy</h1>
       <h2 class="animated-titles">
         <span class="title active">.NET Developer</span>
-        <span class="title">Junior Cloud Developer</span>
+        <span class="title">Azure Enthusiast</span>
         <span class="title">Full Stack Developer</span>
       </h2>
       <p>Welcome to my portfolio! I build scalable web apps and cloud solutions.</p>
       <div class="buttons">
-        <a href="assets/Your_Resume.pdf" download class="btn btn-primary">Download Resume</a>
+        <a href="#projects" class="btn btn-primary">Explore Projects</a>
         <a href="#contact" class="btn btn-primary">Contact Me</a>
       </div>
     </div>
