--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -17,7 +17,7 @@
       <li><a href="#education" (click)="closeMenu()">Education</a></li>
       <li><a href="#experience" (click)="closeMenu()">Experience</a></li>
       <li><a href="#projects" (click)="closeMenu()">Projects</a></li>
-      <li><a href="#certifications" (click)="closeMenu()">Certifications</a></li>
+      <!-- <li><a href="#certifications" (click)="closeMenu()">Certifications</a></li> -->
       <li><a href="#contact" (click)="closeMenu()">Contact</a></li>
     </ul>
   </div>
