--- a/src/app/components/projects/projects.html
+++ b/src/app/components/projects/projects.html
@@ -67,7 +67,7 @@
         </p>
         <div class="project-links">
           <a href="https://github.com/your-username/task-manager" target="_blank"><i class="fab fa-github"></i></a>
-          <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+          <a href="https://snekhapalanisamy-portfolio-fwhxfbf8gydrdma8.canadacentral-01.azurewebsites.net/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
         </div>
       </div>
     </div>
