github push code portfolio changes

--- a/src/app/components/projects/projects.html
+++ b/src/app/components/projects/projects.html
@@ -63,10 +63,10 @@
            Designed with modern frontend practices and deployed using automated CI/CD pipelines in the cloud.
         </p>
         <p class="project-tech">
-          <strong>Tech Stack:</strong> Angular, Azure Static Web Apps, Azure DevOps
+          <strong>Tech Stack:</strong> Angular, PHP, Azure App Service, Azure DevOps
         </p>
         <div class="project-links">
-          <a href="https://github.com/your-username/task-manager" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/SnekhaPalanisamy/myportfolio-app" target="_blank"><i class="fab fa-github"></i></a>
           <a href="https://snekhapalanisamy-portfolio-fwhxfbf8gydrdma8.canadacentral-01.azurewebsites.net/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
         </div>
       </div>
